--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.body{
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-container{
+  width: fit-content;
+  padding-top: 20px;
+  padding-left: 5px;
+}
+
+.burger_button{
+  background-color: rgb(29, 29, 32); 
+  width: 40px;
+  height: 40px;
   display: flex;
+  border: none;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
+  justify-content: space-around;
+  z-index: 4;
+  position: relative;
+}
+
+.line1,
+.line2,.line3{
+  height: 5px;
+  width: 30px;
+  background-color: antiquewhite;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: 0.4s;
+
 }
 
-.App-link {
-  color: #61dafb;
+.change .line1 {
+  -webkit-transform: rotate(-45deg) translate(-10px, 9px);
+  transform: rotate(-45deg) translate(-10px, 9px);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.change .line2 {opacity: 0;}
+
+.change .line3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.sidenav{
+  width: 0;
+  height: calc(100% - 40px);
+  padding: 0;
+  margin: 0;
+  background: rgb(37, 37, 37);
+  overflow-x: hidden;
+  transition: 0.5s;
+  position: fixed;
+  z-index: 5;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #817f7f;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
 }
